@@ -10,7 +10,7 @@ AC_PREREQ([2.69])
 # Process this file with autoconf to produce a configure script.
 
 # Would like to extract R package version from R DESCRIPTION file
-AC_INIT([RQuantlib],[0.4.24],[edd@debian.org])
+AC_INIT([RQuantlib],[0.4.23.2],[edd@debian.org])
 
 # Set CXX and CXXFLAGS based on the R configuration (with thanks to KH)
 : ${R_HOME=`R RHOME`}
