@@ -1,3 +1,7 @@
+2024-07-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/vanilla.cpp: Refinement
+
 2024-07-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro release and date
